# expensemgr-api

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: test_and_analyse_code.yaml
.github/agents/: react-best-practices.agent.md
.github/skills/react-best-practices/: SKILL.md
.github/workflows/: create-a-reusable-wf.yaml
expensemgr/: decorators.py  main.py  use_decorator.py
expensemgr/cache_store/: cache_store_base.py
expensemgr/cache_store/redis/: redis.py  redis_store.py
expensemgr/database/: db.py
expensemgr/database/models/: expense.py  users.py
expensemgr/docker/: wait-for-db.sh
expensemgr/docker/application/: setup.sql
expensemgr/docker/application-testing/: Dockerfile  create-db.sh  entrypoint.sh  setup.sql
expensemgr/redis/: redis_cache.py
expensemgr/routers/: auth.py  currency.py  exchange_rate.py  expense.py  users.py
expensemgr/schemas/: currency.py  exchange_rate.py  expense.py  users.py
expensemgr/services/: auth.py  currency.py  exchange_rate.py  expense.py  test.py  users.py  utils.py
expensemgr/utils/: constants.py  logger.py  secrets.py
expensemgr/utils/exchange_rates/: exchange_rates.json
expensemgr/utils/helper_scripts/: helper_1.sql
expensemgr/utils/populate_currency_table/: populate_currency_table.py
migrations/: env.py
migrations/versions/: 28fdea352c6c_.py  550139955241_base_revision.py  701aef755424_.py  77bca3aa9510_.py  98375379e734_.py  a6841cb6419d_.py  b7319fd2e1d5_revision_1.py  e1ea376d9d48_first_revision.py
tests/unit/: conftest.py
tests/unit/auth/: test_auth.py
tests/unit/currency/: test_create_currency.py  test_currency.py
tests/unit/expense/: test_create_expense.py  test_expense.py
tests/unit/users/: test_create_user.py
