[tool.poetry]
name = "expensemgr"
version = "0.1.0"
description = ""
authors = ["smandalsid <smandal.sid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
pytest = "^8.3.4"
factory-boy = "^3.3.1"
pytest-asyncio = "^0.25.2"
pyodbc = "^5.2.0"
alembic = "^1.14.1"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
