[project]
name = "expensemgr"
version = "0.1.0"
description = ""
authors = [{ name = "smandalsid", email = "smandal.sid@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[standard]>=0.120.4,<0.121",
    "uvicorn[standard]>=0.38.0,<0.39",
    "sqlalchemy>=2.0.44,<3",
    "psycopg2-binary>=2.9.11,<3",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-jose[cryptography]>=3.5.0,<4",
    "pytest>=8.4.2,<9",
    "factory-boy>=3.3.3,<4",
    "pytest-asyncio>=1.2.0,<2",
    "pyodbc>=5.3.0,<6",
    "alembic>=1.17.1,<2",
    "pytest-cov>=7.0.0,<8",
    "bcrypt==4.3.0",
    "flake8>=7.3.0,<8",
    "black>=25.11.0,<26",
    "isort>=7.0.0,<8",
    "currencyapicom>=0.1.1,<0.2",
    "redis[hiredis]>=7.1.0,<8",
    "ruff>=0.14.7,<0.15",
    "locust>=2.42.5,<3",
    "upstash-redis>=1.7.0,<2",
]

[project.scripts]
app = "expensemgr.main:app"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv]

[tool.uv.build-backend]
module-root = ""
